# cloudcull

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo_report.json  docker-compose.yml  main.py  pyproject.toml  remediation.sh  remediation_manifest.json  requirements.txt
.github/: FUNDING.yml
.github/workflows/: cull_report.yml
adapters/: aws.py  azure.py  gcp.py
config/: remediation_manifest.json
core/: pricing.py
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard/public/: report.json
dashboard/src/: App.css  App.jsx  index.css
docs/: architecture.md  architecture_rationale.md  blueprint.md  deployment.md  design_principles.md  local_setup.md  operations.md  positioning.md  security_internals.md
docs/adr/: 001-unified-remediation-flow.md
docs/examples/: aws_gpu_instance.tf.example
infra/: Dockerfile  docker-compose.yml
integrations/: remediation.py
llm/: base.py  factory.py
llm/providers/: anthropic.py  google.py  groq.py  mock.py  openai.py
scripts/: demo.sh
src/: dashboard_server.py  main.py
src/adapters/: __init__.py  aws.py  azure.py  base.py  gcp.py
src/core/: pricing.py  remediation.py  settings.py
src/llm/: base.py  factory.py  utils.py
src/llm/providers/: anthropic.py  google.py  groq.py  openai.py  simulated.py
tests/: conftest.py
tests/e2e/: test_dashboard.py
tests/integration/: test_fault_tolerance.py
tests/unit/: test_hardening.py  test_main.py  test_remediation_flow.py
tests/unit/adapters/: test_aws.py  test_azure.py  test_gcp.py
tests/unit/adapters_test/: test_aws.py  test_azure.py  test_gcp.py
tests/unit/core/: test_pricing.py
tests/unit/core_test/: test_pricing.py  test_remediation.py
tests/unit/integrations/: test_remediation.py
tests/unit/llm/: test_providers.py
tests/unit/llm_test/: test_providers.py  test_robust_parsing.py
