[project]
name = "cloudcull"
version = "0.1.0"
description = "CloudCull: The Autonomous Multi-Cloud GPU Sniper Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.33",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-identity>=1.19.0",
    "google-cloud-compute>=1.23.0",
    "google-cloud-monitoring>=2.26.0",
    "openai>=2.15.0",
    "anthropic>=0.76.0",
    "google-genai>=1.60.0",
    "groq>=1.0.0",
    "pydantic>=2.10.0",
    "tenacity>=9.0.0",
]

[project.scripts]
cloudcull = "src.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:google.genai.*",
    "ignore::DeprecationWarning:google.rpc.*",
]
